finally my verticle view page is working

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.cardviewanimation.VerticalViewPager
+    <com.example.android.verticleviewpager.VerticalViewPager
         android:id="@+id/VerticleViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
