--- a/app/src/main/res/layout/activity_verticle_view_pager.xml
+++ b/app/src/main/res/layout/activity_verticle_view_pager.xml
@@ -23,13 +23,16 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:src="@drawable/artificial_intelligence"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY"
+                android:src="@drawable/islamic_states" />
 
             <TextView
                 android:id="@+id/textView"
+                android:layout_below="@id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:textStyle="bold"
                 android:layout_marginTop="10dp"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
